start sign-up part

--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
           <div class="form-group">
             <select class="form-control" id="my-select">
               <option class="label">Select Avatar Number</option>
-              <option>1</option>
+              <option selected>1</option>
               <option>2</option>
               <option>3</option>
               <option>4</option>
