--- a/client/index.html
+++ b/client/index.html
@@ -28,11 +28,11 @@
         <br>
         <div class="group">
           <label for="user1" class="label">Username</label>
-          <input id="user1" type="text" class="input">
+          <input id="user1" type="text" class="input sigInEnter">
         </div>
         <div class="group">
           <label for="pass1" class="label">Password</label>
-          <input id="pass1" type="password" class="input" data-type="password">
+          <input id="pass1" type="password" class="input sigInEnter" data-type="password">
         </div>
         <div class="group">
           <input id="check1" type="checkbox" class="check" checked>
