fixed keyup submit

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="group">
 
-          <input id="sign-in-button" type="submit" class="button" value="Sign In">
+          <input id="sign-in-button" type="submit" class="button" value="Sign-in">
 
         </div>
         <div class="hr"></div>
