--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,7 @@
 
   <aside>
     <header>
-      <input type="text" placeholder="search">
+      <input type="text" id="serchByName" placeholder="search">
     </header>
 
     <ul id="users-list">
@@ -136,6 +136,8 @@
   
 </body>
 <script type="module" src="./app/init.js"></script>
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
