--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
 
 <script src="https://kit.fontawesome.com/8faacb2a17.js" crossorigin="anonymous"></script>
-
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="./style.css">
 
 </head>
