scroll the last commen to view

--- a/client/index.html
+++ b/client/index.html
@@ -126,7 +126,7 @@
     <footer>
     <form class="msger-inputarea">
       <textarea rows="1" id="myComment" type="text" class="msger-input" placeholder="Enter your message..."> </textarea>
-      <button type="submit" class="btn btn-primary msger-send-btn" href="#" role="button" id="submitComment">Send</button>
+      <button type="submit" class="btn btn-primary msger-send-btn"  role="button" id="submitComment">Send</button>
     </form> 
   </footer>   
 
