--- a/client/index.html
+++ b/client/index.html
@@ -31,13 +31,9 @@
           <label for="user1" class="label">Username</label>
           <input id="user1" type="text" class="input">
         </div>
-        <div class="group">
+        <div class="group mb-5">
           <label for="pass1" class="label">Password</label>
           <input id="pass1" type="password" class="input" data-type="password">
-        </div>
-        <div class="group">
-          <input id="check1" type="checkbox" class="check" checked>
-          <label for="check1"><span class="icon"></span> Keep me Signed in</label>
         </div>
         <div class="group">
 
